@@ -1,5 +1,5 @@
 /*
- * $Id: tcp_init.h,v 1.7 2009/03/05 17:20:42 andrei Exp $
+ * $Id: tcp_init.h,v 1.8 2009/03/09 13:45:28 andrei Exp $
  *
  * Copyright (C) 2001-2003 FhG Fokus
  *
@@ -38,6 +38,8 @@
 #define DEFAULT_TCP_CONNECT_TIMEOUT 10 /* if a connect doesn't complete in this
 										  time, timeout */
 #define DEFAULT_TCP_MAX_CONNECTIONS 2048 /* maximum connections */
+
+#define DEFAULT_TCP_BUF_SIZE	4096  /* buffer size used for reads */
 
 struct tcp_child{
 	pid_t pid;
